--- a/teaching.html
+++ b/teaching.html
@@ -77,6 +77,24 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
+			<div class="card-header"><h3>University of Bonn</h3></div>
+  			<div class="card-body">
+				<ul>
+					<li><b>Categorification at roots of unity</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2016</li>
+					<li><b>Representation theory II</b>, <i>Graduate class</i>, ~45 hours of lecture in 2015 with weekly marked exercises</li>
+					<li><b>Recent topics in representation theory</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2015</li>
+					<li><b>Hall algebras and related topics</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2015</li>
+					<li><b>Geometric invariant theory and quiver varieties</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2014</li>
+					<li><b>Koszul duality</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2011</li>
+					<li><b>Flag varieties, Kac-Moody groups and representation theory</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2009</li>
+				</ul>
+  			</div>
+		</div>
+	</div>
+	<p></p>
+	<p></p>
+	<div class="container">
+		<div class="card border-success">
 			<div class="card-header"><h3>University of Cologne</h3></div>
   			<div class="card-body">
 				<ul>
@@ -84,6 +102,7 @@
 					<li><b>Hopf Algebras and Quantum groups</b>, <i>Graduate class</i>, ~45 hours of lecture in 2014 with weekly marked exercises</li>
 					<li><b>Coxeter groups and Hecke algebras</b>, <i>Undergraduate class</i>, ~45 hours of lecture in 2013 with weekly marked exercises</li>
 					<li><b>Kac-Moody groups and flag varieties</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2013</li>
+					<li><b>Research seminar algebra</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2013</li>
 					<li><b>Introduction to algebraic geometry and toric varieties</b>, <i>Undergraduate seminar</i>, ~30 hours of seminar in 2018</li>
 					<li><b>Symmetries and ornaments</b>, <i>Undergraduate seminar</i>, ~30 hours of seminar in 2018</li>
 					<li><b>Introduction to mathematics</b>, <i>Undergraduate class</i>, ~30 hours of lecture in 2006</li>
@@ -93,72 +112,6 @@
 	</div>
 	<p></p>
 	<p></p>
-	<div class="container">
-		<div class="card border-success">
-			<div class="card-header"><h3>Teaching</h3></div>
-  			<div class="card-body">
-<TABLE id="t01" WIDTH="1000" >
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Categorification at roots of unity</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2016</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Representation theory II</b></TD>
-  <TD><i>Graduate class</i></TD>
-  <TD><i>2015</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~45 hours</i> + weekly tutorials</TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Recent topics in representation theory</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2015</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Hall algebras and related topics</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2015</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Geometric invariant theory and quiver varieties</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2014</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Research seminar algebra</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2013</i></TD>
-  <TD><i>University of Cologne</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Koszul duality</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2011</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-<TR ALIGN=LEFT VALIGN=TOP>
-  <TD><b>Flag varieties, Kac-Moody groups and representation theory</b></TD>
-  <TD><i>Graduate seminar</i></TD>
-  <TD><i>2009</i></TD>
-  <TD><i>University of Bonn</i></TD>
-  <TD><i>~30 hours</i></TD>
-</TR>
-</TABLE>
-  			</div>
-		</div>
-
-	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
