--- a/teaching.html
+++ b/teaching.html
@@ -59,6 +59,14 @@
   		</div>
 	</nav>
 
+	<div class="container">
+		<div class="card border-info">
+			<div class="card-header"><h3>Current teaching</h3></div>
+  			<div class="card-body">
+				<p><b>Categorification</b>, <i>mini lecture series</i>, for a total of 8-10 hours.</p>
+  			</div>
+		</div>
+	</div>
 	<p></p>
 	<p></p>
 	<div class="container">
@@ -66,9 +74,9 @@
 			<div class="card-header"><h3>University of Sydney</h3></div>
   			<div class="card-body">
 				<ul>
-					<li><b>Quantum groups</b>, <i>Graduate class</i> ~30 hours of lecture in 2018</li>
-					<li><b>Commutative algebra</b>, <i>Graduate class</i> ~30 hours of lecture in 2018</li>
-					<li><b>Commutative algebra</b>, <i>Graduate class</i> ~30 hours of lecture in 2017</li>
+					<li><b>Quantum groups</b>, <i>Graduate class</i>, ~30 hours of lecture in 2018</li>
+					<li><b>Commutative algebra</b>, <i>Graduate class</i>, ~30 hours of lecture in 2018</li>
+					<li><b>Commutative algebra</b>, <i>Graduate class</i>, ~30 hours of lecture in 2017</li>
 				</ul>
   			</div>
 		</div>
