--- a/publications.html
+++ b/publications.html
@@ -16,7 +16,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
 
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand navbar-dark bg-dark">
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="navbar-toggler-icon"></span>
   		</button>
