--- a/ls-categorification.html
+++ b/ls-categorification.html
@@ -76,9 +76,9 @@
 					<li><b>Part 3:</b> <a href="./notes/3tensor.pdf">Tensor product spaces</a></li>
 					<li><b>Part 4:</b> <a href="./notes/4exterior.pdf">Exterior tensor spaces</a></li>
 					<li><b>Part 5:</b> <a href="./notes/5hwtmodules.pdf">Highest weight modules</a></li>
-					<li><b>Part 6:</b> <a href="./notes/6cyclotomic.pdf">Cyclotomic Hecke algebra action</a></li>
-					<li><b>Part 7:</b> <a href="./notes/7linkinvariants.pdf">Link invariants</a></li>
-					<li><b>Part 8:</b> <a href="./notes/8othertypes.pdf">Outside of type A</a></li>
+					<li><b>Part 6:</b> <a href="">Cyclotomic Hecke algebra action</a></li>
+					<li><b>Part 7:</b> <a href="">Link invariants</a></li>
+					<li><b>Part 8:</b> <a href="">Outside of type A</a></li>
 				</ul>
   			</div>
 		</div>
