--- a/ls-categorification.html
+++ b/ls-categorification.html
@@ -71,7 +71,7 @@
 				<p class="card-text">We first explain what we mean by categorification, followed by some easy and basic examples that were not discussed in the lecture series but use much simpler categories for the categorification. Then we successively categorify more and more complicated representations, starting with tensor powers of the natural representation, followed by exterior tensor powers of the natural representation, and then finally categorifying arbitrary finite dimensional highest weight modules for the general linear Lie algebra.</p>
 				<p class="card-text">Afterwards we explain what this has to do with the degenerate Hecke algebra that was previously discussed in the seminar as well as the link to low-dimensional topology. Finally we discuss a bit what the situation is outside of type A.</p>
 				<ul>
-					<li><b>Part 1:</b> <a href="./notes/1goal.pdf">What is categorification for us?</a></li>
+					<li><b>Part 1:</b> <a href="./notes/1goal.pdf">What is a categorification for us?</a></li>
 					<li><b>Part 2:</b> <a href="./notes/2examples.pdf">Easy basic examples</a></li>
 					<li><b>Part 3:</b> <a href="./notes/3tensor.pdf">Tensor product spaces</a></li>
 					<li><b>Part 4:</b> <a href="./notes/4exterior.pdf">Exterior tensor spaces</a></li>
