--- a/ls-categorification.html
+++ b/ls-categorification.html
@@ -70,7 +70,7 @@
 				<p class="card-text">Thinking of categories in analogy to algebras you should think of the graded version of being the analog of extending the scalars of your algebra, while the bounded derived category is a non-commutative version of localisation.</p>
 				<p class="card-text">We first explain what we mean by categorification, followed by some easy and basic examples that were not discussed in the lecture series but use much simpler categories for the categorification. Then we successively categorify more and more complicated representations, starting with tensor powers of the natural representation, followed by exterior tensor powers of the natural representation, and then finally categorifying arbitrary finite dimensional highest weight modules for the general linear Lie algebra.</p>
 				<ul>
-					<li><b>Part 1:</b> <a href="./notes/1goal.pdf">What is a categorification for us?</a></li>
+					<li><b>Part 1:</b> <a href="./notes/1goal.pdf">What is a categorification for us? (pdf)</a>: <a href="./notes/1goal1.jpg">Page 1 (jpg)</a>, <a href="./notes/1goal2.jpg">Page 2 (jpg)</a>, <a href="./notes/1goal3.jpg">Page 3 (jpg)</a></li>
 					<li><b>Part 2:</b> <a href="./notes/2examples.pdf">Easy basic examples</a></li>
 					<li><b>Part 3:</b> <a href="./notes/3tensor.pdf">Tensor product spaces</a></li>
 					<li><b>Part 4:</b> <a href="./notes/4exterior.pdf">Exterior tensor spaces</a></li>
