--- a/ls-categorification.html
+++ b/ls-categorification.html
@@ -71,10 +71,10 @@
 				<p class="card-text">We first explain what we mean by categorification, followed by some easy and basic examples that were not discussed in the lecture series but use much simpler categories for the categorification. Then we successively categorify more and more complicated representations, starting with tensor powers of the natural representation, followed by exterior tensor powers of the natural representation, and then finally categorifying arbitrary finite dimensional highest weight modules for the general linear Lie algebra.</p>
 				<p class="card-text">Below are the scanned pages of the summary, either as jpg files for single pages or as a pdf (rather large) per each chapter.</p>
 				<ul>
-					<li><b>Part 1:</b> <a href="./notes/1goal.pdf">What is a categorification for us? (pdf)</a>: <a href="./notes/1goal1.jpg">Page 1 (jpg)</a>, <a href="./notes/1goal2.jpg">Page 2 (jpg)</a>, <a href="./notes/1goal3.jpg">Page 3 (jpg)</a></li>
-					<li><b>Part 2:</b> <a href="./notes/2examples.pdf">Easy basic examples</a></li>
-					<li><b>Part 3:</b> <a href="./notes/3tensor.pdf">Tensor product spaces</a></li>
-					<li><b>Part 4:</b> <a href="./notes/4exterior.pdf">Exterior tensor spaces</a></li>
+					<li><b>Part 1:</b> <a href="./notes/1goal.pdf">What is a categorification for us? (pdf)</a>: <a href="./notes/1goal1.jpg">Page 1 (jpg)</a>, <a href="./notes/1goal2.jpg">Page 2 (jpg)</a>, <a href="./notes/1goal3.jpg">Page 3 (jpg)</a> and <a href="./notes/1goal4.jpg">Page 4 (jpg)</a></li>
+					<li><b>Part 2:</b> <a href="./notes/2examples.pdf">Easy basic examples</a>: <a href="./notes/2examples1.jpg">Page 1 (jpg)</a>, <a href="./notes/2examples2.jpg">Page 2 (jpg)</a> and <a href="./notes/2examples3.jpg">Page 3 (jpg)</a></li>
+					<li><b>Part 3:</b> <a href="./notes/3tensor.pdf">Tensor product spaces</a>: <a href="./notes/3tensor1.jpg">Page 1 (jpg)</a>, <a href="./notes/3tensor2.jpg">Page 2 (jpg)</a>, <a href="./notes/3tensor3.jpg">Page 3 (jpg)</a>, <a href="./notes/3tensor4.jpg">Page 4 (jpg)</a> and <a href="./notes/3tensor5.jpg">Page 5 (jpg)</a></li>
+					<li><b>Part 4:</b> <a href="./notes/4exterior.pdf">Exterior tensor spaces</a>: <a href="./notes/4exterior1.jpg">Page 1 (jpg)</a>, <a href="./notes/4exterior2.jpg">Page 2 (jpg)</a>, <a href="./notes/4exterior3.jpg">Page 3 (jpg)</a>, <a href="./notes/4exterior4.jpg">Page 4 (jpg)</a> and <a href="./notes/4exterior5.jpg">Page 5 (jpg)</a></li>
 				</ul>
   			</div>
 		</div>
