--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,7 @@
 		<div class="card border-info">
 			<div class="card-header"><h3>Current teaching</h3></div>
   			<div class="card-body">
-				<p><b>Categorification</b>, <i>mini lecture series</i>, for a total of 8-10 hours <a href="https://michaelehrig.github.io/ls-categorification.html">.</a></p>
+				<p><b>Categorification</b>, <i>mini lecture series</i>, for a total of 12+ hours <a href="https://michaelehrig.github.io/ls-categorification.html">.</a></p>
   			</div>
 		</div>
 	</div>
