--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<p class="card-text"><b>Address:</b><br/>
 					Office 316A<br/>
 					School of Mathematics and Statistics <br/>
-					Beijing Institute of Mathematics<br/>
+					Beijing Institute of Technology<br/>
 					Liangxiang campus, Fangshan District <br/>
 					Beijing, P.R. China </p>
 					<p class="card-text">email: <b>micha.ehrig@outlook.com</b></p>
