--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,22 @@
 		<div class="card border-info">
 			<div class="card-header"><h3>Current teaching</h3></div>
   			<div class="card-body">
-				<p><b>Categorification</b>, <i>mini lecture series</i>, for a total of 12+ hours <a href="https://michaelehrig.github.io/ls-categorification.html">.</a></p>
+				<p><b>Algebraic geometry and algebraic groups</b>, <i>Graduate class</i>: <a href="https://michaelehrig.github.io/lectures/ls-alggroups.html">Course informations</a></p>
+  			</div>
+		</div>
+	</div>
+	<p></p>
+	<p></p>
+	<div class="container">
+		<div class="card border-success">
+			<div class="card-header"><h3>Beijing Institute of Technology</h3></div>
+  			<div class="card-body">
+				<ul>
+					<li><b>Categorification</b>, <i>Lecture series</i>, ~20+ hours of lecture in 2018.<a href="https://michaelehrig.github.io/lectures/ls-categorification.html">.</a></p>
+					<li><b>Quantum groups</b>, <i>Graduate class</i>, ~30 hours of lecture in 2018</li>
+					<li><b>Commutative algebra</b>, <i>Graduate class</i>, ~30 hours of lecture in 2018</li>
+					<li><b>Commutative algebra</b>, <i>Graduate class</i>, ~30 hours of lecture in 2017</li>
+				</ul>
   			</div>
 		</div>
 	</div>
