file name change

--- a/teaching.html
+++ b/teaching.html
@@ -76,7 +76,7 @@
 			<div class="card-header"><h3>Beijing Institute of Technology</h3></div>
   			<div class="card-body">
 				<ul>
-					<li><b>Categorification</b>, <i>Lecture series</i>, ~20+ hours of lecture in 2018.<a href="https://michaelehrig.github.io/lectures/ls-categorification.html">.</a></p>
+					<li><b>Categorification</b>, <i>Lecture series</i>, ~20+ hours of lecture in 2018<a href="https://michaelehrig.github.io/lectures/ls-categorification.html">.</a></pli>
 					<li><b>Quantum groups</b>, <i>Graduate class</i>, ~30 hours of lecture in 2018</li>
 					<li><b>Commutative algebra</b>, <i>Graduate class</i>, ~30 hours of lecture in 2018</li>
 					<li><b>Commutative algebra</b>, <i>Graduate class</i>, ~30 hours of lecture in 2017</li>
