--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Michael Ehrig, Website">
     <meta name="author" content="Michael Ehrig">
 
-    <title>Lecture series on Categorification</title>
+    <title>Graduate class: Algebraic geometry and algebraic groups</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -23,16 +23,16 @@
   		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="nav navbar-nav mr-auto">
 				<li class="nav-item">
-        				<a class="nav-link" href="./index.html">Home</span></a>
+        				<a class="nav-link" href="../index.html">Home</span></a>
       			</li>
       			<li class="nav-item">
-        				<a class="nav-link" href="./research.html">Research</a>
+        				<a class="nav-link" href="../research.html">Research</a>
       			</li>
       			<li class="nav-item">
-        				<a class="nav-link" href="./publications.html">Publications</a>
+        				<a class="nav-link" href="../publications.html">Publications</a>
       			</li>
       			<li class="nav-item">
-        				<a class="nav-link" href="./teaching.html">Teaching</a>
+        				<a class="nav-link" href="../teaching.html">Teaching</a>
       			</li>
     				<li class="nav-item dropdown">
         				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -63,19 +63,9 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
-			<div class="card-header"><h3>Lecture series on Categorification</h3></div>
+			<div class="card-header"><h3>Graduate class: Algebraic geometry and algebraic groups</h3></div>
   			<div class="card-body">
-				<p class="card-text">Below are some summarising notes for the lecture series on Categorification. These focus on the parts of the lecture series that are important if one first encounters this subject. Thus not much time is spend on the graded version of category O or the bounded derived category, as these are tools that are useful but irrelevant for a first understanding.</p>
-				<p class="card-text">If you have never encountered graded version of a category or the bounded derived category of an abelian category, then you should just think of these as certain modifications that make the category more interesting (and complicated) but do not change the Grothendieck group by much if at all. In the case of the graded version allowing to pass from the complex numbers to complex rational functions in one indeterminant for the Grothendieck group. In case of the bounded derived category it does not change the Grothendieck group at all.</o>
-				<p class="card-text">Thinking of categories in analogy to algebras you should think of the graded version of being the analog of extending the scalars of your algebra and deforming it, while the bounded derived category is a non-commutative version of localisation.</p>
-				<p class="card-text">We first explain what we mean by categorification, followed by some easy and basic examples that were not discussed in the lecture series and use much simpler categories for the categorification. Then we successively categorify more and more complicated representations, starting with tensor powers of the natural representation, followed by exterior tensor powers of the natural representation, and then finally categorifying arbitrary finite dimensional highest weight modules for the general linear Lie algebra.</p>
-				<p class="card-text">Below are the scanned pages of the summary, either as jpg files for single pages or as a pdf (rather large) per chapter.</p>
-				<ul>
-					<li><b>Part 1:</b> <a href="./notes/1goal.pdf">What is a categorification for us? (pdf)</a>: <a href="./notes/1goal1.jpg">Page 1 (jpg)</a>, <a href="./notes/1goal2.jpg">Page 2 (jpg)</a>, <a href="./notes/1goal3.jpg">Page 3 (jpg)</a> and <a href="./notes/1goal4.jpg">Page 4 (jpg)</a></li>
-					<li><b>Part 2:</b> <a href="./notes/2examples.pdf">Easy basic examples</a>: <a href="./notes/2examples1.jpg">Page 1 (jpg)</a>, <a href="./notes/2examples2.jpg">Page 2 (jpg)</a> and <a href="./notes/2examples3.jpg">Page 3 (jpg)</a></li>
-					<li><b>Part 3:</b> <a href="./notes/3tensor.pdf">Tensor product spaces</a>: <a href="./notes/3tensor1.jpg">Page 1 (jpg)</a>, <a href="./notes/3tensor2.jpg">Page 2 (jpg)</a>, <a href="./notes/3tensor3.jpg">Page 3 (jpg)</a>, <a href="./notes/3tensor4.jpg">Page 4 (jpg)</a> and <a href="./notes/3tensor5.jpg">Page 5 (jpg)</a></li>
-					<li><b>Part 4:</b> <a href="./notes/4exterior.pdf">Exterior tensor spaces</a>: <a href="./notes/4exterior1.jpg">Page 1 (jpg)</a>, <a href="./notes/4exterior2.jpg">Page 2 (jpg)</a>, <a href="./notes/4exterior3.jpg">Page 3 (jpg)</a>, <a href="./notes/4exterior4.jpg">Page 4 (jpg)</a> and <a href="./notes/4exterior5.jpg">Page 5 (jpg)</a></li>
-				</ul>
+				<p class="card-text">The goal of this graduate class is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups.</p>
   			</div>
 		</div>
 	</div>
