--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -65,6 +65,10 @@
 		<div class="card border-success">
 			<div class="card-header"><h3>Graduate class: Algebraic geometry and algebraic groups</h3></div>
   			<div class="card-body">
+				<p class="card-text"><b>Room and Time:</b><br/>
+				Tuesday, Room: <b>B206</b><br/>
+				Wednesday, Room: <b>B206</b></p>
+				<p></p>
 				<p class="card-text">The goal of this graduate class is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups.</p>
   			</div>
 		</div>
