--- a/lectures/ls-categorification.html
+++ b/lectures/ls-categorification.html
@@ -23,16 +23,16 @@
   		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="nav navbar-nav mr-auto">
 				<li class="nav-item">
-        				<a class="nav-link" href="./index.html">Home</span></a>
+        				<a class="nav-link" href="../index.html">Home</span></a>
       			</li>
       			<li class="nav-item">
-        				<a class="nav-link" href="./research.html">Research</a>
+        				<a class="nav-link" href="../research.html">Research</a>
       			</li>
       			<li class="nav-item">
-        				<a class="nav-link" href="./publications.html">Publications</a>
+        				<a class="nav-link" href="../publications.html">Publications</a>
       			</li>
       			<li class="nav-item">
-        				<a class="nav-link" href="./teaching.html">Teaching</a>
+        				<a class="nav-link" href="../teaching.html">Teaching</a>
       			</li>
     				<li class="nav-item dropdown">
         				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
