--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -65,9 +65,9 @@
 		<div class="card border-success">
 			<div class="card-header"><h3>Graduate class: Algebraic geometry and algebraic groups</h3></div>
   			<div class="card-body">
-				<p class="card-text"><b>Room and Time:</b><br/>
-				Tuesday, Room: <b>B206</b><br/>
-				Wednesday, Room: <b>B206</b></p>
+				<p class="card-text"><b>Time and room:</b> (Weeks: 4-12)<br/>
+				Tuesday 13:20 - 14:55, Room: <b>B206</b><br/>
+				Wednesday 13:20 - 14:55, Room: <b>B206</b></p>
 				<p></p>
 				<p class="card-text">The goal of this graduate class is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups.</p>
   			</div>
