--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,7 @@
 		<div class="card border-info">
 			<div class="card-header"><h3>Current teaching</h3></div>
   			<div class="card-body">
-				<p><b>Algebraic geometry and algebraic groups</b>, <i>Graduate class</i>: <a href="https://michaelehrig.github.io/lectures/ls-alggroups.html">Course informations</a></p>
+				<p><b>Algebraic geometry and algebraic groups</b>, <i>Graduate course</i>: <a href="https://michaelehrig.github.io/lectures/ls-alggroups.html">Course informations</a></p>
   			</div>
 		</div>
 	</div>
@@ -77,9 +77,6 @@
   			<div class="card-body">
 				<ul>
 					<li><b>Categorification</b>, <i>Lecture series</i>, ~20+ hours of lecture in 2018<a href="https://michaelehrig.github.io/lectures/ls-categorification.html">.</a></pli>
-					<li><b>Quantum groups</b>, <i>Graduate class</i>, ~30 hours of lecture in 2018</li>
-					<li><b>Commutative algebra</b>, <i>Graduate class</i>, ~30 hours of lecture in 2018</li>
-					<li><b>Commutative algebra</b>, <i>Graduate class</i>, ~30 hours of lecture in 2017</li>
 				</ul>
   			</div>
 		</div>
@@ -91,9 +88,9 @@
 			<div class="card-header"><h3>University of Sydney</h3></div>
   			<div class="card-body">
 				<ul>
-					<li><b>Quantum groups</b>, <i>Graduate class</i>, ~30 hours of lecture in 2018</li>
-					<li><b>Commutative algebra</b>, <i>Graduate class</i>, ~30 hours of lecture in 2018</li>
-					<li><b>Commutative algebra</b>, <i>Graduate class</i>, ~30 hours of lecture in 2017</li>
+					<li><b>Quantum groups</b>, <i>Graduate course</i>, ~30 hours of lecture in 2018</li>
+					<li><b>Commutative algebra</b>, <i>Graduate course</i>, ~30 hours of lecture in 2018</li>
+					<li><b>Commutative algebra</b>, <i>Graduate course</i>, ~30 hours of lecture in 2017</li>
 				</ul>
   			</div>
 		</div>
@@ -106,7 +103,7 @@
   			<div class="card-body">
 				<ul>
 					<li><b>Categorification at roots of unity</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2016</li>
-					<li><b>Representation theory II</b>, <i>Graduate class</i>, ~45 hours of lecture in 2015 with weekly marked exercises</li>
+					<li><b>Representation theory II</b>, <i>Graduate course</i>, ~45 hours of lecture in 2015 with weekly marked exercises</li>
 					<li><b>Recent topics in representation theory</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2015</li>
 					<li><b>Hall algebras and related topics</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2015</li>
 					<li><b>Geometric invariant theory and quiver varieties</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2014</li>
@@ -123,14 +120,14 @@
 			<div class="card-header"><h3>University of Cologne</h3></div>
   			<div class="card-body">
 				<ul>
-					<li><b>Tropical geometry</b>, <i>Graduate class</i>, ~45 hours of lecture in 2016 with weekly marked exercises</li>
-					<li><b>Hopf Algebras and Quantum groups</b>, <i>Graduate class</i>, ~45 hours of lecture in 2014 with weekly marked exercises</li>
-					<li><b>Coxeter groups and Hecke algebras</b>, <i>Undergraduate class</i>, ~45 hours of lecture in 2013 with weekly marked exercises</li>
+					<li><b>Tropical geometry</b>, <i>Graduate course</i>, ~45 hours of lecture in 2016 with weekly marked exercises</li>
+					<li><b>Hopf Algebras and Quantum groups</b>, <i>Graduate course</i>, ~45 hours of lecture in 2014 with weekly marked exercises</li>
+					<li><b>Coxeter groups and Hecke algebras</b>, <i>Undergraduate course</i>, ~45 hours of lecture in 2013 with weekly marked exercises</li>
 					<li><b>Kac-Moody groups and flag varieties</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2013</li>
 					<li><b>Research seminar algebra</b>, <i>Graduate seminar</i>, ~30 hours of seminar in 2013</li>
 					<li><b>Introduction to algebraic geometry and toric varieties</b>, <i>Undergraduate seminar</i>, ~30 hours of seminar in 2018</li>
 					<li><b>Symmetries and ornaments</b>, <i>Undergraduate seminar</i>, ~30 hours of seminar in 2018</li>
-					<li><b>Introduction to mathematics</b>, <i>Undergraduate class</i>, ~30 hours of lecture in 2006</li>
+					<li><b>Introduction to mathematics</b>, <i>Undergraduate course</i>, ~30 hours of lecture in 2006</li>
 				</ul>
   			</div>
 		</div>
