--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -87,7 +87,7 @@
 				<b>Prerequisites:</b> Groups, index of subgroups<br/>
 				<b>Exercises:</b> <a href="https://michaelehrig.github.io/lectures/exercises/ag-sheet4.pdf">Sheet 4</a></p>
 				<p class="card-text"><b>Chapter 5: TBA</b><br/>
-				Depending on the progress of the course, this content will be decided on later.<br/>
+				Depending on the progress of the course, this content will be decided on later. There will be no exercises related to this chapter.<br/>
   			</div>
 		</div>
 	</div>
