--- a/teaching.html
+++ b/teaching.html
@@ -63,7 +63,7 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-info">
-			<div class="card-header"><h3>Current teaching</h3></div>
+			<div class="card-header"><h3>Current teaching (at Beijing Institute of Technology)</h3></div>
   			<div class="card-body">
 				<p><b>Algebraic geometry and algebraic groups</b>, <i>Graduate course</i>: <a href="https://michaelehrig.github.io/lectures/ls-alggroups.html">Course informations</a></p>
   			</div>
