--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -65,8 +65,12 @@
 		<div class="card border-success">
 			<div class="card-header"><h3>Graduate course: Algebraic geometry and algebraic groups</h3></div>
   			<div class="card-body">
-				<p class="card-text"><b>Time and room:</b> (Weeks: 4-12)<br/>
-				Tuesday <b>13:20 - 14:55</b>, Room: <b>B206</b><br/>
+				<p class="card-text"><b>Time and place:</b> (Weeks: 4-12)<br/>
+				Tuesday <b>13:20 - 14:55</b>, Room: <b>2-B505</b><br/>
+				Wednesday <b>13:20 - 14:55</b>, Room: <b>B206</b></p>
+				<p></p>
+				<p class="card-text"><b>Office hours:</b> Wednesday 9:00 - 12:00 in 理学楼 406-3<br/>
+				Tuesday <b>13:20 - 14:55</b>, Room: <b>2-B505</b><br/>
 				Wednesday <b>13:20 - 14:55</b>, Room: <b>B206</b></p>
 				<p></p>
 				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures. In addition there is a pdf-file exercise sheet for each chapter. This includes a number of exercises, for passing the class you have to complete <b>one</b> exercise from each sheet of chapters 1-4.</p>
