--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -69,9 +69,19 @@
 				Tuesday <b>13:20 - 14:55</b> in room <b>2-B505</b><br/>
 				Wednesday <b>13:20 - 14:55</b> in room <b>丹枫园C425</b></p>
 				<p></p>
-				<p class="card-text"><b>Office hours:</b> Wednesday <b>9:00 - 12:00</b> in room <b>理学楼406-3</b><br/>
+				<p class="card-text"><b>Office hours:</b> <br/>
+				Wednesday <b>9:00 - 12:00</b> in room <b>理学楼406-3</b><br/>
+				or by appointment (email: <b>micha.ehrig@outlook.com</b> or <b>6120190037@bit.edu.cn</b>)</p>
 				<p></p>
-				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures. In addition there is a pdf-file exercise sheet for each chapter. This includes a number of exercises, for passing the class you have to complete <b>one</b> exercise from each sheet of chapters 1-4.</p>
+				<p class="card-text"><b>Examination:</b> <br/>
+				The final mark for the lecture will be comprised of the following parts:<br/>
+				<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 1: Commutative algebra,  <b>Deadline: week 3</b></li>
+				<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 2: Algebraic sets,  <b>Deadline: week 5</b></li>
+				<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 3: Affine algebraic varieties,  <b>Deadline: week 7</b></li>
+				<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 4: Affine algebraic groups,  <b>Deadline: week 9 (i.e. the week after the course ends)</b></li>
+				<li>Written exam in week 9 after the end of the course</li>
+				<p></p>				
+				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures. In addition there is a pdf-file exercise sheet for each of the first four chapter.</p>
 				<p class="card-text"><b>Chapter 1: Commutative algebra</b><br/>
 				In this section we discuss the basics in the theory of commutative algebras over an arbitrary base field. The main focus here are a number of very famous theorems from the late 19th and early 20th century, namely Noether's Normalisation theorem and Hilbert's Nullstellensatz and the Basis theorem.<br/>
 				<b>Prerequisites:</b> Rings and algebras over fields, ideals (including prime and maximal ideals), zero-divisors and nilpotent elements in a ring, modules for a ring, field extensions and algebraic closure of a field.<br/>
@@ -83,13 +93,13 @@
 				<p class="card-text"><b>Chapter 3: Affine algebraic varieties</b><br/>
 				In this section we introduce affine algebraic varieties over an algebraically closed field and the maximal spectrum of an algebra as a topological space. We will look at the ring of regular functions of an affine algebraic variety. Finally we will recover an affine algebraic variety from its ring of regular functions making the concept of an affine algebraic variety more universal than the one of an algebraic set.<br/>
 				<b>Prerequisites:</b> ---<br/>
-				<b>Exercises:</b> <i>coming soon</i></p>
+				<b>Exercises:</b> <i>coming later</i></p>
 				<p class="card-text"><b>Chapter 4: Affine algebraic groups</b><br/>
 				In this section we affine algebraic groups. We will see how affine algebraic groups are related to certain Hopf algebras. We will also see how a variety being a group will affect the various properties of morphisms of varieties as well as the topology. Finally we will prove the linearisation theorem, that every affine algebraic group is in fact isomorphic to a linear algebraic group.<br/>
 				<b>Prerequisites:</b> Groups, index of subgroups<br/>
-				<b>Exercises:</b> <i>coming soon</i></p>
-				<p class="card-text"><b>Chapter 5: TBA</b><br/>
-				Depending on the progress of the course, this content will be decided on later. There will be no exercises related to this chapter.<br/>
+				<b>Exercises:</b> <i>coming later</i></p>
+				<p class="card-text"><b>Chapter 5: Outlook</b><br/>
+				Depending on the progress of the course, this content will be decided on later. There will be no exercises related to this chapter and the content will not be relevant for the examination.<br/>
   			</div>
 		</div>
 	</div>
