--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -74,12 +74,15 @@
 				or by appointment (email: <b>micha.ehrig@outlook.com</b> or <b>6120190037@bit.edu.cn</b>)</p>
 				<p></p>
 				<p class="card-text"><b>Examination:</b> <br/>
-				The final mark for the lecture will be comprised of the following parts:<br/>
-				<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 1: Commutative algebra,  <b>Deadline: week 3</b></li>
-				<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 2: Algebraic sets,  <b>Deadline: week 5</b></li>
-				<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 3: Affine algebraic varieties,  <b>Deadline: week 7</b></li>
-				<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 4: Affine algebraic groups,  <b>Deadline: week 9 (i.e. the week after the course ends)</b></li>
-				<li>Written exam in week 9 after the end of the course</li>
+				The final mark for the lecture will be comprised of the following parts:
+				<ul>
+					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 1: Commutative algebra,  <b>Deadline: week 3</b></li>
+					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 2: Algebraic sets,  <b>Deadline: week 5</b></li>
+					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 3: Affine algebraic varieties,  <b>Deadline: week 7</b></li>
+					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 4: Affine algebraic groups,  <b>Deadline: week 9 (i.e. the week after the course ends)</b></li>
+					<li>Written exam in week 9 after the end of the course</li>
+				</ul>
+				Each exercise report will make up 15% of the final score, while the exam in week 9 will make up 40% of the score.</p>
 				<p></p>				
 				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures. In addition there is a pdf-file exercise sheet for each of the first four chapter.</p>
 				<p class="card-text"><b>Chapter 1: Commutative algebra</b><br/>
