--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -65,9 +65,9 @@
 		<div class="card border-success">
 			<div class="card-header"><h3>Graduate course: Algebraic geometry and algebraic groups</h3></div>
   			<div class="card-body">
-				<p class="card-text"><b>Time and place:</b> (Weeks: 4-12)<br/>
-				Tuesday <b>13:20 - 14:55</b> in room <b>2-B505</b><br/>
-				Wednesday <b>13:20 - 14:55</b> in room <b>丹枫园C425</b></p>
+				<h4>Time and place:</h4>
+				<p>Tuesday (Weeks: 4-12)<b>13:20 - 14:55</b> in room <b>2-B505</b><br/>
+				Wednesday (Weeks: 4-12)<b>13:20 - 14:55</b> in room <b>丹枫园C425</b></p>
 				<p></p>
 				<p class="card-text"><b>Office hours:</b> <br/>
 				Wednesday <b>9:00 - 12:00</b> in room <b>理学楼406-3</b><br/>
@@ -82,7 +82,7 @@
 					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 4: Affine algebraic groups,  <b>Deadline: week 13 (i.e. the week after the course ends)</b></li>
 					<li>Written exam in week 13 after the end of the course</li>
 				</ul>
-				Each exercise report will make up 15% of the final score, while the exam in week 9 will make up 40% of the score.</p>
+				Each exercise report will make up 15% of the final score, while the exam in week 9 will make up 40% of the score. The exercise reports can be handed in on paper or via email.</p>
 				<p></p>				
 				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures. In addition there is a pdf-file exercise sheet for each of the first four chapter.</p>
 				<p class="card-text"><b>Chapter 1: Commutative algebra</b><br/>
